@@ -568,36 +568,22 @@ void
 _initialize_f_language (void)
 {
   build_fortran_types ();
-  register_gdbarch_swap (&builtin_type_f_character, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_logical, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_logical_s1, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_logical_s2, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_integer, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_integer_s2, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_real, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_real_s8, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_real_s16, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_complex_s8, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_complex_s16, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_complex_s32, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_f_void, 
-			 sizeof (struct type *), NULL);
-  register_gdbarch_swap (&builtin_type_string, 
-			 sizeof (struct type *), NULL);
 
-  register_gdbarch_swap (NULL, 0, build_fortran_types);
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_character);
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_logical); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_logical_s1); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_logical_s2); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_integer); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_integer_s2); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_real); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_real_s8); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_real_s16); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_complex_s8); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_complex_s16); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_complex_s32); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_f_void); 
+  DEPRECATED_REGISTER_GDBARCH_SWAP (builtin_type_string); 
+  deprecated_register_gdbarch_swap (NULL, 0, build_fortran_types);
 
   builtin_type_string =
     init_type (TYPE_CODE_STRING, TARGET_CHAR_BIT / TARGET_CHAR_BIT,
