@@ -5406,9 +5406,8 @@ _initialize_remote (void)
 
   /* Old tacky stuff.  NOTE: This comes after the remote protocol so
      that the remote protocol has been initialized.  */
-  register_gdbarch_swap (&remote_address_size, 
-                         sizeof (&remote_address_size), NULL);
-  register_gdbarch_swap (NULL, 0, build_remote_gdbarch_data);
+  DEPRECATED_REGISTER_GDBARCH_SWAP (remote_address_size);
+  deprecated_register_gdbarch_swap (NULL, 0, build_remote_gdbarch_data);
 
   init_remote_ops ();
   add_target (&remote_ops);
